--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,8 @@ find_package (cinolib REQUIRED)
 add_executable (main
     "src/main.cpp"
     "src/RSE/App.cpp"
-    "src/RSE/AxesWidget.cpp"
+    "src/RSE/AxesGuiItem.cpp"
+    "src/RSE/AppSidebarItem.cpp"
     "src/RSE/ChildControl.cpp"
     "src/RSE/Style.cpp"
 )
