--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/cinolib"]
 	path = external/cinolib
 	url = https://github.com/francescozoccheddu/cinolib
+[submodule "external/cpputils"]
+	path = external/cpputils
+	url = https://github.com/francescozoccheddu/cpputils
