--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable (main
     "src/RSE/App.cpp"
     "src/RSE/Grid.cpp"
     "src/RSE/Refinement.cpp"
+    "src/RSE/SourceControl.cpp"
     "src/RSE/AxesGuiItem.cpp"
     "src/RSE/AppSidebarItem.cpp"
     "src/RSE/ChildControl.cpp"
