--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ add_executable (main
     "src/main.cpp"
     "src/RSE/App.cpp"
     "src/RSE/Grid.cpp"
-    "src/RSE/Refinement.cpp"
+    "src/RSE/CppExporter.cpp"
     "src/RSE/SourceControl.cpp"
     "src/RSE/AxesGuiItem.cpp"
     "src/RSE/AppSidebarItem.cpp"
