--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,37 @@
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.14)
+
+include (FetchContent)
+
+set (FETCHCONTENT_QUIET FALSE)
 
 project ("refinement-schemes-editor")
 
 # cinolib
 
-set (CINOLIB_HEADER_ONLY ON)
+set (CINOLIB_HEADER_ONLY OFF)
 set (CINOLIB_USES_OPENGL_GLFW_IMGUI ON)
-set (cinolib_DIR "external/cinolib")
-find_package (cinolib REQUIRED)
+
+FetchContent_Declare (
+    cinolib
+    GIT_REPOSITORY "https://github.com/francescozoccheddu/cinolib.git"
+    GIT_TAG origin/master
+    GIT_SHALLOW TRUE
+    GIT_PROGRESS TRUE
+)
+
+FetchContent_MakeAvailable (cinolib)
 
 # cpputils
 
-add_subdirectory ("external/cpputils")
+FetchContent_Declare (
+    cpputils
+    GIT_REPOSITORY "https://github.com/francescozoccheddu/cpputils.git"
+    GIT_TAG origin/master
+    GIT_SHALLOW TRUE
+    GIT_PROGRESS TRUE
+)
+
+FetchContent_MakeAvailable (cpputils)
 
 # main
 
